test_suite/alan-2022-examples/failing/006490_mutation.alan
source l4s begin leave 0 02 end
